--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.48.1",
+    "framer-motion": "^11.2.12",
+    "next": "14.2.4",
+    "next-sanity": "^9.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-hook-form": "^7.52.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^6.16.0",
+    "sanity": "^3.48.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
